--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Emrah#0001",
   "dependencies": {
     "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
