--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-rate-limit": "^5.3.0",
     "generate-password": "^1.6.0",
     "moment": "^2.29.1",
     "socket.io": "^4.1.2",
